Fix scrollbar showing up sometimes due to layout component

--- a/src/app/components/art/drawing-score/drawing-score.component.scss
+++ b/src/app/components/art/drawing-score/drawing-score.component.scss
@@ -1,5 +1,6 @@
-.mr-score-miguel {
-  transition: var(--mr-transition-time) ease-in-out;
+.mr-score-miguel,
+.mr-score-miguel * {
+  transition: var(--mr-transition-time) ease-in-out !important;
 }
 
 .mr-score-bad {
