--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -15,7 +15,6 @@ select {
 .btn:hover {
   background-color: var(--mr-input-bg-color);
   border-color: var(--mr-btn-bg-color);
-  color: var(--mr-btn-bg-color);
 }
 
 .form-group {
